--- a/pyproject.toml
+++ b/pyproject.toml
@@ -268,6 +268,7 @@ text_processor = "irene.components.text_processor_component:TextProcessorCompone
 intent_system = "irene.components.intent_component:IntentComponent"
 monitoring = "irene.components.monitoring_component:MonitoringComponent"
 configuration = "irene.components.configuration_component:ConfigurationComponent"
+nlu_analysis = "irene.components.nlu_analysis_component:NLUAnalysisComponent"
 
 [project.entry-points."irene.workflows"]
 unified_voice_assistant = "irene.workflows.voice_assistant:UnifiedVoiceAssistantWorkflow"
