--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ audio-output = [
     "audioplayer>=0.6.0",
     # "simpleaudio>=1.0.4",  # Temporarily disabled due to compilation issues with custom OpenSSL
     "numpy>=1.21.0",
+    "librosa>=0.10.0",  # For high-quality audio resampling in audio_helpers.py
 ]
 
 # Voice trigger (wake word detection)
@@ -120,34 +121,7 @@ text-multilingual = [
     "eng-to-ipa>=0.0.2",
 ]
 
-# Wake word training and model development
-wake-word-training = [
-    # Audio processing and recording
-    "sounddevice>=0.4.6",
-    "soundfile>=0.12.1",
-    "numpy>=1.21.0",
-    
-    # Machine learning (for TensorFlow training)
-    "tensorflow>=2.12.0",
-    "librosa>=0.10.0",
-    "scipy>=1.9.0",
-    
-    # Model conversion and export
-    "tf2onnx>=1.15.0",
-    "onnx>=1.14.0",
-    
-    # Data processing and visualization - Fixed: Removed restrictive matplotlib constraint
-    "pandas>=1.5.0",
-    "matplotlib>=3.6.0",  # Fixed: Removed upper bound constraint
-    "seaborn>=0.12.0",
-    
-    # Audio utilities
-    "pydub>=0.25.1",
-    
-    # Progress tracking and configuration
-    "tqdm>=4.64.0",
-    "pyyaml>=6.0",
-]
+# Note: wake-word-training dependencies moved to separate project
 
 # Development dependencies - Fixed: Removed duplication
 dev = [
@@ -177,20 +151,10 @@ headless = [
 
 # All optional components - Fixed: Re-enabled
 all = [
-    "irene-voice-assistant[voice,cloud-asr,advanced-asr,llm,wake-word-training]"
+    "irene-voice-assistant[voice,cloud-asr,advanced-asr,llm]"
 ]
 
 [project.scripts]
-# Wake word training tools
-irene-record-samples = "wake_word_training.scripts.record_samples:main"
-irene-validate-model = "wake_word_training.scripts.validate_model:main"
-irene-train-wake-word = "wake_word_training.scripts.tensorflow_trainer:main"
-
-# Multi-target model converters
-irene-convert-to-esp32 = "wake_word_training.scripts.converters.to_esp32:main"
-irene-convert-to-onnx = "wake_word_training.scripts.converters.to_onnx:main"
-irene-convert-to-tflite = "wake_word_training.scripts.converters.to_tflite:main"
-
 # Configuration and build management tools
 irene-config-migrate = "irene.tools.config_migrator:main"
 irene-config-validate = "irene.tools.config_validator_cli:main"
@@ -307,7 +271,7 @@ settings = "irene.runners.settings_runner:SettingsManagerRunner"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["irene*", "wake_word_training*"]
+include = ["irene*"]
 # Fixed: Removed references to non-existent directories
 exclude = []
 
